# soundscribe-webui

./: .dockerignore  .gitignore  CONTRIBUTORS.txt  LICENSE  README.rst  build_local.sh  init_db.sh  local.yml  manage.py  production.yml  pyproject.toml
.envs.example/.local/: .django
.envs.example/.prod/: .backups  .django
.envs/.local/: .postgres
.envs/.prod/: .django  .postgres
.github/workflows/: docs.yml
compose/local/django/: Dockerfile  start
config/: api_router.py  celery_app.py  urls.py  wsgi.py
config/settings/: base.py  local.py
docs/: conf.py  index.rst
soundscribe_webui/: conftest.py
soundscribe_webui/contrib/sites/migrations/: 0003_set_site_domain_and_name.py  0004_alter_site_options.py
soundscribe_webui/static/css/: project.css
soundscribe_webui/static/sass/: project.scss
soundscribe_webui/templates/: 404.html  500.html  base.html
soundscribe_webui/templates/account/: email.html  email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_from_key.html  password_set.html  signup.html
soundscribe_webui/templates/flatpages/: default.html
soundscribe_webui/templates/pages/: about.html
soundscribe_webui/templates/users/: user_detail.html  user_form.html  user_list.html
soundscribe_webui/users/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
soundscribe_webui/users/management/commands/: ensuresuperuser.py
soundscribe_webui/users/migrations/: 0002_alter_user_first_name.py
soundscribe_webui/users/tests/: test_drf_urls.py  test_drf_views.py  test_forms.py  test_models.py  test_tasks.py  test_urls.py  test_views.py
soundscribe_webui/utils/: storages.py
